# ewasm-precompiles

blake2/: Cargo.toml
bls12pairing/: Cargo.toml
ecadd/: Cargo.toml
ecmul/: Cargo.toml
ecpairing/: Cargo.toml
ecrecover/: Cargo.toml
ed25519/: Cargo.toml
identity/: Cargo.toml
keccak256/: Cargo.toml
modexp/: Cargo.toml
ripemd160/: Cargo.toml
sha1/: Cargo.toml
sha256/: Cargo.toml
